src/App.css
body {
  background-color: #FF4444;
}

#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  background-color: #FF4444;
  height: 100%;
}

.pokemon-list-wrapper {
  width: 30%;
  overflow-y: scroll;
  background-color: #D5D5D5;
  padding: 15px;
  border: 1px solid #000000;
}

.pokemon-list-item {
  background-color: #E2E2E2;
  padding: 8px;
  border-radius: 4px;
  cursor: pointer;
}

.pokemon-list-item:not(:last-child) {
  margin-bottom: 10px;
}

.pokemon-detail-wrapper {
  display: flex;
  flex: 1;
  margin-left: 25px;
  background-color: #FFFFFF;
  border: 1px solid #000000;
  padding: 0 30px;
}

.content-wrapper {
  width: 100%;
}

.circle-wrapper {
  position: relative;
  margin-bottom: 70px;
}

.circle {
  height: 20vw;
  width: 40vw;
  border-bottom-left-radius: 270px;
  border-bottom-right-radius: 270px;
  margin: 0 auto;
}

.images-wrapper {
  position: absolute;
  top: 60px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.type-img-container {
  height: 0;
  width: 100%;
  padding: 0;
  padding-bottom: 100%;
}

.type-img {
  position: absolute;
  height: 150%;
  width: 100%;
  left: 0;
  top: -60px;
}

.pokemon-image {
  z-index: 2;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 300px;
  position: absolute;
}

.pokemon-type-image {
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  bottom: 0;
  z-index: 1;
}

.pokemon-info {
  text-align: left;
  margin-bottom: 20px;
}

.pokemon-name {
  text-transform: capitalize;
  font-size: 32px;
  line-height: 32px;
}

.pokemon-number {
  opacity: 0.7;
}

.types-container {
  display: flex;
  flex-wrap: nowrap;
  margin-bottom: 20px;
}

.type-wrapper {
  border-radius: 60px;
  width: fit-content;
  padding: 4px 14px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 8px;
  max-height: 36px;
}

.type-name {
  font-size: 14px;
  text-transform: capitalize;
  padding-left: 8px;
}

.info-wrapper {
  display: flex;
  flex-wrap: wrap;
}

.info-container {
  margin-right: 20px;
  margin-bottom: 20px;
}

.info-title-wrapper {
  display: flex;
  align-items: center;
  margin-bottom: 4px;
}

.info-title {
  color: #00000099;
  text-transform: uppercase;
  padding-left: 6px;
}

.info-detail {
  border: 1px solid #0000001A;
  border-radius: 15px;
  padding: 8px;
  width: 154px;
  font-size: 18px;
}

@media (max-width: 768px) {
  .pokemon-list-wrapper {
    width: 40%;
  }

  .pokemon-detail-wrapper {
    width: 60%;
  }

  .type-img {
    top: -40px
  }

  .pokemon-image {
    height: 180px;
  }

  .types-container {
    flex-wrap: wrap;
  }

  .type-wrapper:not(:last-child) {
    margin-bottom: 20px;
  }

  .type-img {
    height: 100%;
    top: -0;
  }
}

@media (max-width: 500px) {
  .pokemon-image {
    max-height: 150px;
    height: auto;
  }
}

